tests/snapshots/snapshots__budget_cmdk_level6.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2200 → level 10 (2122 words)

command-score.ts
     1→// The scores are arranged so that a continuous match of characters will
     2→// result in a total score of 1.
     3→//
     4→// The best case, this character is a match, and either this is the start
     5→// of the string, or the previous character was also a match.
     6→var SCORE_CONTINUE_MATCH = 1,
     7→  // A new match at the start of a word scores better than a new match
     8→  // elsewhere as it's more likely that the user will type the starts
     9→  // of fragments.
    10→  // NOTE: We score word jumps between spaces slightly higher than slashes, brackets
    11→  // hyphens, etc.
    12→  SCORE_SPACE_WORD_JUMP = 0.9,
    13→  SCORE_NON_SPACE_WORD_JUMP = 0.8,
    14→  // Any other match isn't ideal, but we include it for completeness.
    15→  SCORE_CHARACTER_JUMP = 0.17,
    16→  // If the user transposed two letters, it should be significantly penalized.
    17→  //
    18→  // i.e. "ouch" is more likely than "curtain" when "uc" is typed.
    19→  SCORE_TRANSPOSITION = 0.1,
    20→  // The goodness of a match should decay slightly with each missing
    21→  // character.
    22→  //
    23→  // i.e. "bad" is more likely than "bard" when "bd" is typed.
    24→  //
    25→  // This will not change the order of suggestions based on SCORE_* until
    26→  // 100 characters are inserted between matches.
    27→  PENALTY_SKIPPED = 0.999,
    28→  // The goodness of an exact-case match should be higher than a
    29→  // case-insensitive match by a small amount.
    30→  //
    31→  // i.e. "HTML" is more likely than "haml" when "HM" is typed.
    32→  //
    33→  // This will not change the order of suggestions based on SCORE_* until
    34→  // 1000 characters are inserted between matches.
    35→  PENALTY_CASE_MISMATCH = 0.9999,
    36→  // Match higher for letters closer to the beginning of the word
    37→  PENALTY_DISTANCE_FROM_START = 0.9,
    38→  // If the word has more characters than the user typed, it should
    39→  // be penalised slightly.
    40→  //
    41→  // i.e. "html" is more likely than "html5" if I type "html".
    42→  //
    43→  // However, it may well be the case that there's a sensible secondary
    44→  // ordering (like alphabetical) that it makes sense to rely on when
    45→  // there are many prefix matches, so we don't make the penalty increase
    46→  // with the number of tokens.
    47→  PENALTY_NOT_COMPLETE = 0.99
    48→
    49→var IS_GAP_REGEXP = /[\\\/_+.#"@\[\(\{&]/,
    50→  COUNT_GAPS_REGEXP = /[\\\/_+.#"@\[\(\{&]/g,
    51→  IS_SPACE_REGEXP = /[\s-]/,
    52→  COUNT_SPACE_REGEXP = /[\s-]/g
    53→
    54→function commandScoreInner(
    55→  string,
    56→  abbreviation,
    57→  lowerString,
    58→  lowerAbbreviation,
    59→  stringIndex,
    60→  abbreviationIndex,
    61→  memoizedResults,
    62→) {
    63→  if (abbreviationIndex === abbreviation.length) {
    64→    if (stringIndex === string.length) {
    65→      return SCORE_CONTINUE_MATCH
    66→    }
    67→    return PENALTY_NOT_COMPLETE
    68→  }
    69→
    70→  var memoizeKey = `${stringIndex},${abbreviationIndex}`
    71→  if (memoizedResults[memoizeKey] !== undefined) {
    72→    return memoizedResults[memoizeKey]
    73→  }
    74→
    75→  var abbreviationChar = lowerAbbreviation.charAt(abbreviationIndex)
    76→  var index = lowerString.indexOf(abbreviationChar, stringIndex)
    77→  var highScore = 0
    78→
    79→  var score, transposedScore, wordBreaks, spaceBreaks
    80→
    81→  while (index >= 0) {
    82→    score = commandScoreInner(
    83→      string,
    84→      abbreviation,
    85→      lowerString,
    86→      lowerAbbreviation,
    87→      index + 1,
    88→      abbreviationIndex + 1,
    89→      memoizedResults,
    90→    )
    91→    if (score > highScore) {
    92→      if (index === stringIndex) {
    93→        score *= SCORE_CONTINUE_MATCH
    94→      } else if (IS_GAP_REGEXP.test(string.charAt(index - 1))) {
    95→        score *= SCORE_NON_SPACE_WORD_JUMP
    96→        wordBreaks = string.slice(stringIndex, index - 1).match(COUNT_GAPS_REGEXP)
    97→        if (wordBreaks && stringIndex > 0) {
    98→          score *= Math.pow(PENALTY_SKIPPED, wordBreaks.length)
    99→        }
   100→      } else if (IS_SPACE_REGEXP.test(string.charAt(index - 1))) {
   101→        score *= SCORE_SPACE_WORD_JUMP
   102→        spaceBreaks = string.slice(stringIndex, index - 1).match(COUNT_SPACE_REGEXP)
   103→        if (spaceBreaks && stringIndex > 0) {
   104→          score *= Math.pow(PENALTY_SKIPPED, spaceBreaks.length)
   105→        }
   106→      } else {
   107→        score *= SCORE_CHARACTER_JUMP
   108→        if (stringIndex > 0) {
   109→          score *= Math.pow(PENALTY_SKIPPED, index - stringIndex)
   110→        }
   111→      }
   112→
   113→      if (string.charAt(index) !== abbreviation.charAt(abbreviationIndex)) {
   114→        score *= PENALTY_CASE_MISMATCH
   115→      }
   116→    }
   117→
   118→    if (
   119→      (score < SCORE_TRANSPOSITION &&
   120→        lowerString.charAt(index - 1) === lowerAbbreviation.charAt(abbreviationIndex + 1)) ||
   121→      (lowerAbbreviation.charAt(abbreviationIndex + 1) === lowerAbbreviation.charAt(abbreviationIndex) && // allow duplicate letters. Ref #7428
   122→        lowerString.charAt(index - 1) !== lowerAbbreviation.charAt(abbreviationIndex))
   123→    ) {
   124→      transposedScore = commandScoreInner(
   125→        string,
   126→        abbreviation,
   127→        lowerString,
   128→        lowerAbbreviation,
   129→        index + 1,
   130→        abbreviationIndex + 2,
   131→        memoizedResults,
   132→      )
   133→
   134→      if (transposedScore * SCORE_TRANSPOSITION > score) {
   135→        score = transposedScore * SCORE_TRANSPOSITION
   136→      }
   137→    }
   138→
   139→    if (score > highScore) {
   140→      highScore = score
   141→    }
   142→
   143→    index = lowerString.indexOf(abbreviationChar, index + 1)
   144→  }
   145→
   146→  memoizedResults[memoizeKey] = highScore
   147→  return highScore
   148→}
   149→
   150→function formatInput(string) {
   151→  // convert all valid space characters to space so they match each other
   152→  return string.toLowerCase().replace(COUNT_SPACE_REGEXP, ' ')
   153→}
   154→
   155→export function commandScore(string: string, abbreviation: string, aliases: string[]): number {
   156→  /* NOTE:
   157→   * in the original, we used to do the lower-casing on each recursive call, but this meant that toLowerCase()
   158→   * was the dominating cost in the algorithm, passing both is a little ugly, but considerably faster.
   159→   */
   160→  string = aliases && aliases.length > 0 ? `${string + ' ' + aliases.join(' ')}` : string
   161→  return commandScoreInner(string, abbreviation, formatInput(string), formatInput(abbreviation), 0, 0, {})
   162→}
index.tsx
    10→type Children = { children?: React.ReactNode }
    11→type DivProps = React.ComponentPropsWithoutRef<typeof Primitive.div>
    13→type LoadingProps = Children &
    14→  DivProps & {
    15→    /** Estimated progress of loading asynchronous options. */
    16→    progress?: number
    17→    /**
    18→     * Accessible label for this loading progressbar. Not shown visibly.
    19→     */
    20→    label?: string
    21→  }
    23→type EmptyProps = Children & DivProps & {}
    24→type SeparatorProps = DivProps & {
    25→  /** Whether this separator should always be rendered. Useful if you disable automatic filtering. */
    26→  alwaysRender?: boolean
    27→}
    28→type DialogProps = RadixDialog.DialogProps &
    29→  CommandProps & {
    30→    /** Provide a className to the Dialog overlay. */
    31→    overlayClassName?: string
    32→    /** Provide a className to the Dialog content. */
    33→    contentClassName?: string
    34→    /** Provide a custom element the Dialog should portal into. */
    35→    container?: HTMLElement
    36→  }
    37→type ListProps = Children &
    38→  DivProps & {
    39→    /**
    40→     * Accessible label for this List of suggestions. Not shown visibly.
    41→     */
    42→    label?: string
    43→  }
    44→type ItemProps = Children &
    45→  Omit<DivProps, 'disabled' | 'onSelect' | 'value'> & {
    46→    /** Whether this item is currently disabled. */
    47→    disabled?: boolean
    48→    /** Event handler for when this item is selected, either via click or keyboard selection. */
    49→    onSelect?: (value: string) => void
    50→    /**
    51→     * A unique value for this item.
    52→     * If no value is provided, it will be inferred from `children` or the rendered `textContent`. If your `textContent` changes between renders, you _must_ provide a stable, unique `value`.
    53→     */
    54→    value?: string
    55→    /** Optional keywords to match against when filtering. */
    56→    keywords?: string[]
    57→    /** Whether this item is forcibly rendered regardless of filtering. */
    58→    forceMount?: boolean
    59→  }
    60→type GroupProps = Children &
    61→  Omit<DivProps, 'heading' | 'value'> & {
    62→    /** Optional heading to render for this group. */
    63→    heading?: React.ReactNode
    64→    /** If no heading is provided, you must provide a value that is unique for this group. */
    65→    value?: string
    66→    /** Whether this group is forcibly rendered regardless of filtering. */
    67→    forceMount?: boolean
    68→  }
    69→type InputProps = Omit<React.ComponentPropsWithoutRef<typeof Primitive.input>, 'value' | 'onChange' | 'type'> & {
    70→  /**
    71→   * Optional controlled state for the value of the search input.
    72→   */
    73→  value?: string
    74→  /**
    75→   * Event handler called when the search value changes.
    76→   */
    77→  onValueChange?: (search: string) => void
    78→}
    79→type CommandFilter = (value: string, search: string, keywords?: string[]) => number
    80→type CommandProps = Children &
    81→  DivProps & {
    82→    /**
    83→     * Accessible label for this command menu. Not shown visibly.
    84→     */
    85→    label?: string
    86→    /**
    87→     * Optionally set to `false` to turn off the automatic filtering and sorting.
    88→     * If `false`, you must conditionally render valid items based on the search query yourself.
    89→     */
    90→    shouldFilter?: boolean
    91→    /**
    92→     * Custom filter function for whether each command menu item should matches the given search query.
    93→     * It should return a number between 0 and 1, with 1 being the best match and 0 being hidden entirely.
    94→     * By default, uses the `command-score` library.
    95→     */
    96→    filter?: CommandFilter
    97→    /**
    98→     * Optional default item value when it is initially rendered.
    99→     */
   100→    defaultValue?: string
   101→    /**
   102→     * Optional controlled state of the selected command menu item.
   103→     */
   104→    value?: string
   105→    /**
   106→     * Event handler called when the selected item of the menu changes.
   107→     */
   108→    onValueChange?: (value: string) => void
   109→    /**
   110→     * Optionally set to `true` to turn on looping around when using the arrow keys.
   111→     */
   112→    loop?: boolean
   113→    /**
   114→     * Optionally set to `true` to disable selection via pointer events.
   115→     */
   116→    disablePointerSelection?: boolean
   117→    /**
   118→     * Set to `false` to disable ctrl+n/j/p/k shortcuts. Defaults to `true`.
   119→     */
   120→    vimBindings?: boolean
   121→  }
   123→type Context = {
   124→  value: (id: string, value: string, keywords?: string[]) => void
   125→  item: (id: string, groupId: string) => () => void
   126→  group: (id: string) => () => void
   127→  filter: () => boolean
   128→  label: string
   129→  getDisablePointerSelection: () => boolean
   130→  // Ids
   131→  listId: string
   132→  labelId: string
   133→  inputId: string
   134→  // Refs
   135→  listInnerRef: React.RefObject<HTMLDivElement | null>
   136→}
   137→type State = {
   138→  search: string
   139→  value: string
   140→  selectedItemId?: string
   141→  filtered: { count: number; items: Map<string, number>; groups: Set<string> }
   142→}
   143→type Store = {
   144→  subscribe: (callback: () => void) => () => void
   145→  snapshot: () => State
   146→  setState: <K extends keyof State>(key: K, value: State[K], opts?: any) => void
   147→  emit: () => void
   148→}
   149→type Group = {
   150→  id: string
   151→  forceMount?: boolean
   152→}
   154→const GROUP_SELECTOR = `[cmdk-group=""]`
   155→const GROUP_ITEMS_SELECTOR = `[cmdk-group-items=""]`
   156→const GROUP_HEADING_SELECTOR = `[cmdk-group-heading=""]`
   157→const ITEM_SELECTOR = `[cmdk-item=""]`
   158→const VALID_ITEM_SELECTOR = `${ITEM_SELECTOR}:not([aria-disabled="true"])`
   159→const SELECT_EVENT = `cmdk-item-select`
   160→const VALUE_ATTR = `data-value`
   161→const defaultFilter: CommandFilter = (value, search, keywords) => commandScore(value, search, keywords)
   163→const CommandContext = React.createContext<Context>(undefined)
   164→const useCommand = () => React.useContext(CommandContext)
   165→const StoreContext = React.createContext<Store>(undefined)
   166→const useStore = () => React.useContext(StoreContext)
   167→const GroupContext = React.createContext<Group>(undefined)
   169→const Command = React.forwardRef<HTMLDivElement, CommandProps>((props, forwardedRef) => {
   659→/**
   660→ * Command menu item. Becomes active on pointer enter or through keyboard navigation.
   661→ * Preferably pass a `value`, otherwise the value will be inferred from `children` or
   662→ * the rendered item's `textContent`.
   663→ */
   664→const Item = React.forwardRef<HTMLDivElement, ItemProps>((props, forwardedRef) => {
   725→/**
   726→ * Group command menu items together with a heading.
   727→ * Grouped items are always shown together.
   728→ */
   729→const Group = React.forwardRef<HTMLDivElement, GroupProps>((props, forwardedRef) => {
   770→/**
   771→ * A visual and semantic separator between items or groups.
   772→ * Visible when the search query is empty or `alwaysRender` is true, hidden otherwise.
   773→ */
   774→const Separator = React.forwardRef<HTMLDivElement, SeparatorProps>((props, forwardedRef) => {
   783→/**
   784→ * Command menu input.
   785→ * All props are forwarded to the underyling `input` element.
   786→ */
   787→const Input = React.forwardRef<HTMLInputElement, InputProps>((props, forwardedRef) => {
   829→/**
   830→ * Contains `Item`, `Group`, and `Separator`.
   831→ * Use the `--cmdk-list-height` CSS variable to animate height based on the number of results.
   832→ */
   833→const List = React.forwardRef<HTMLDivElement, ListProps>((props, forwardedRef) => {
   879→/**
   880→ * Renders the command menu in a Radix Dialog.
   881→ */
   882→const Dialog = React.forwardRef<HTMLDivElement, DialogProps>((props, forwardedRef) => {
   896→/**
   897→ * Automatically renders when there are no results for the search query.
   898→ */
   899→const Empty = React.forwardRef<HTMLDivElement, EmptyProps>((props, forwardedRef) => {
   906→/**
   907→ * You should conditionally render this with `progress` while loading asynchronous items.
   908→ */
   909→const Loading = React.forwardRef<HTMLDivElement, LoadingProps>((props, forwardedRef) => {
   930→const pkg = Object.assign(Command, {
   955→/**
   956→ *
   957→ *
   958→ * Helpers
   959→ *
   960→ *
   961→ */
   962→
   963→function findNextSibling(el: Element, selector: string) {
   972→function findPreviousSibling(el: Element, selector: string) {
   981→function useAsRef<T>(data: T) {
   991→const useLayoutEffect = typeof window === 'undefined' ? React.useEffect : React.useLayoutEffect
   993→function useLazyRef<T>(fn: () => T) {
  1003→/** Run a selector against the store state. */
  1004→function useCmdk<T = any>(selector: (state: State) => T): T {
  1010→function useValue(
  1011→  id: string,
  1012→  ref: React.RefObject<HTMLElement>,
  1013→  deps: (string | React.ReactNode | React.RefObject<HTMLElement>)[],
  1014→  aliases: string[] = [],
  1015→) {
  1045→/** Imperatively run a function on the next layout effect cycle. */
  1046→const useScheduleLayoutEffect = () => {
  1061→function renderChildren(children: React.ReactElement) {
  1071→function SlottableWithNestedChildren(
  1072→  { asChild, children }: { asChild?: boolean; children?: React.ReactNode },
  1073→  render: (child: React.ReactNode) => JSX.Element,
  1074→) {
  1081→const srOnlyStyles = {
