tests/snapshots/snapshots__budget_cmdk_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 25 → level 0 (20 words)

ARCHITECTURE.md
LICENSE.md
README.md
cmdk/src/command-score.ts
cmdk/src/index.tsx
cmdk/tsup.config.ts
playwright.config.ts
website/README.md
website/components/cmdk/framer.tsx
website/components/cmdk/linear.tsx
website/components/cmdk/raycast.tsx
website/components/cmdk/vercel.tsx
website/components/code/index.tsx
website/components/icons/index.tsx
website/components/index.ts
website/next-env.d.ts
website/next.config.js
website/pages/_app.tsx
website/pages/_document.tsx
website/pages/index.tsx
