tests/snapshots/snapshots__budget_color_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (940 words)

README.md
     1→# color
     3→Color lets you use colorized outputs in terms of [ANSI Escape
     4→Codes](http://en.wikipedia.org/wiki/ANSI_escape_code#Colors) in Go (Golang). It
     5→has support for Windows too! The API can be used in several ways, pick one that
     6→suits you.
     7→
     8→![Color](https://user-images.githubusercontent.com/438920/96832689-03b3e000-13f4-11eb-9803-46f4c4de3406.jpg)
     9→
    10→## Install
    12→```
    13→go get github.com/fatih/color
    14→```
    15→
    16→## Examples
    18→### Standard colors
    20→```go
    21→// Print with default helper functions
    22→color.Cyan("Prints text in cyan.")
    23→
    24→// A newline will be appended automatically
    25→color.Blue("Prints %s in blue.", "text")
    26→
    27→// These are using the default foreground colors
    28→color.Red("We have red")
    29→color.Magenta("And many others ..")
    30→
    31→```
    32→
    33→### RGB colors
    35→If your terminal supports 24-bit colors, you can use RGB color codes.
    36→
    37→```go
      →…
    45→### Mix and reuse colors
    47→```go
    48→// Create a new color object
    49→c := color.New(color.FgCyan).Add(color.Underline)
      →…
    71→### Use your own output (io.Writer)
    73→```go
    74→// Use your own io.Writer output
    75→color.New(color.FgBlue).Fprintln(myWriter, "blue color!")
      →…
    81→### Custom print functions (PrintFunc)
    83→```go
    84→// Create a custom print function for convenience
    85→red := color.New(color.FgRed).PrintfFunc()
      →…
    94→### Custom fprint functions (FprintFunc)
    96→```go
    97→blue := color.New(color.FgBlue).FprintfFunc()
    98→blue(myWriter, "important notice: %s", stars)
      →…
   105→### Insert into noncolor strings (SprintFunc)
   107→```go
   108→// Create SprintXxx functions to mix strings with other non-colorized strings:
   109→yellow := color.New(color.FgYellow).SprintFunc()
      →…
   124→### Plug into existing code
   126→```go
   127→// Use handy standard colors
   128→color.Set(color.FgYellow)
      →…
   142→### Disable/Enable color
   144→There might be a case where you want to explicitly disable/enable color output. the 
   145→`go-isatty` package will automatically disable color output for non-tty output streams 
   146→(for example if the output were piped directly to `less`).
      →…
   177→## GitHub Actions
   179→To output color in GitHub Actions (or other CI systems that support ANSI colors), make sure to set `color.NoColor = false` so that it bypasses the check for non-tty output streams. 
   180→
   181→
   182→## Credits
   184→* [Fatih Arslan](https://github.com/fatih)
   185→* Windows support via @mattn: [colorable](https://github.com/mattn/go-colorable)
   186→
   187→## License
   189→The MIT License (MIT) - see [`LICENSE.md`](https://github.com/fatih/color/blob/master/LICENSE.md) for more details
color.go
     3→import (
     4→	"fmt"
     5→	"io"
     6→	"os"
     7→	"strconv"
     8→	"strings"
     9→	"sync"
    10→
    11→	"github.com/mattn/go-colorable"
    12→	"github.com/mattn/go-isatty"
    13→)
    15→var (
    16→	// NoColor defines if the output is colorized or not. It's dynamically set to
    17→	// false or true based on the stdout's file descriptor referring to a terminal
    18→	// or not. It's also set to true if the NO_COLOR environment variable is
    19→	// set (regardless of its value). This is a global option and affects all
    20→	// colors. For more control over each color block use the methods
    21→	// DisableColor() individually.
    22→	NoColor = noColorIsSet() || os.Getenv("TERM") == "dumb" ||
    23→		(!isatty.IsTerminal(os.Stdout.Fd()) && !isatty.IsCygwinTerminal(os.Stdout.Fd()))
    25→	// Output defines the standard output of the print functions. By default,
    26→	// os.Stdout is used.
    27→	Output = colorable.NewColorableStdout()
    29→	// Error defines a color supporting writer for os.Stderr.
    30→	Error = colorable.NewColorableStderr()
    32→	// colorsCache is used to reduce the count of created Color objects and
    33→	// allows to reuse already created objects with required Attribute.
    34→	colorsCache   = make(map[Attribute]*Color)
    35→	colorsCacheMu sync.Mutex // protects colorsCache
    38→// noColorIsSet returns true if the environment variable NO_COLOR is set to a non-empty string.
    39→func noColorIsSet() bool {
    40→	return os.Getenv("NO_COLOR") != ""
    41→}
    43→// Color defines a custom color object which is defined by SGR parameters.
    44→type Color struct {
    45→	params  []Attribute
    46→	noColor *bool
    47→}
    49→// Attribute defines a single SGR Code
    50→type Attribute int
    52→const escape = "\x1b"
    54→// Base attributes
    55→const (
    56→	Reset Attribute = iota
    57→	Bold
    58→	Faint
    59→	Italic
    60→	Underline
    61→	BlinkSlow
    62→	BlinkRapid
    63→	ReverseVideo
    64→	Concealed
    65→	CrossedOut
    68→const (
    69→	ResetBold Attribute = iota + 22
    70→	ResetItalic
    71→	ResetUnderline
    72→	ResetBlinking
    74→	ResetReversed
    75→	ResetConcealed
    76→	ResetCrossedOut
    79→var mapResetAttributes map[Attribute]Attribute = map[Attribute]Attribute{
    91→// Foreground text colors
    92→const (
    93→	FgBlack Attribute = iota + 30
    94→	FgRed
    95→	FgGreen
    96→	FgYellow
    97→	FgBlue
    98→	FgMagenta
    99→	FgCyan
   100→	FgWhite
   102→	// used internally for 256 and 24-bit coloring
   103→	foreground
   106→// Foreground Hi-Intensity text colors
   107→const (
   108→	FgHiBlack Attribute = iota + 90
   109→	FgHiRed
   110→	FgHiGreen
   111→	FgHiYellow
   112→	FgHiBlue
   113→	FgHiMagenta
   114→	FgHiCyan
   115→	FgHiWhite
   118→// Background text colors
   119→const (
   120→	BgBlack Attribute = iota + 40
   121→	BgRed
   122→	BgGreen
   123→	BgYellow
   124→	BgBlue
   125→	BgMagenta
   126→	BgCyan
   127→	BgWhite
   129→	// used internally for 256 and 24-bit coloring
   130→	background
   133→// Background Hi-Intensity text colors
   134→const (
   135→	BgHiBlack Attribute = iota + 100
   136→	BgHiRed
   137→	BgHiGreen
   138→	BgHiYellow
   139→	BgHiBlue
   140→	BgHiMagenta
   141→	BgHiCyan
   142→	BgHiWhite
   211→func (c *Color) unset() {
   403→// sequence returns a formatted SGR sequence to be plugged into a "\x1b[...m"
   404→// an example output might be: "1;36" -> bold cyan
   405→func (c *Color) sequence() string {
   406→	format := make([]string, len(c.params))
   407→	for i, v := range c.params {
   408→		format[i] = strconv.Itoa(int(v))
   409→	}
   410→
   411→	return strings.Join(format, ";")
   412→}
   414→// wrap wraps the s string with the colors attributes. The string is ready to
   415→// be printed.
   416→func (c *Color) wrap(s string) string {
   417→	if c.isNoColorSet() {
   418→		return s
   419→	}
   420→
   421→	return c.format() + s + c.unformat()
   422→}
   424→func (c *Color) format() string {
   428→func (c *Color) unformat() string {
   456→func (c *Color) isNoColorSet() bool {
   487→func (c *Color) attrExists(a Attribute) bool {
   497→func boolPtr(v bool) *bool {
   501→func getCachedColor(p Attribute) *Color {
   514→func colorPrint(format string, p Attribute, a ...interface{}) {
   528→func colorString(format string, p Attribute, a ...interface{}) string {
   678→// sprintln is a helper function to format a string with fmt.Sprintln and trim the trailing newline.
   679→func sprintln(a ...interface{}) string {
   680→	return strings.TrimSuffix(fmt.Sprintln(a...), "\n")
   681→}
color_windows.go
     3→import (
     4→	"os"
     5→
     6→	"golang.org/x/sys/windows"
     7→)
     9→func init() {
